--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>My first Webpack app.</title>
   </head>
   <body>
-    <script src="./main.js"></script>
+    <script src="./dist/main.js"></script>
   </body>
 </html>
